[package]
name = "puzzle-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
eframe = "0.31.1"
egui = "0.31.1"
egui-snarl = { version = "0.7.1", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"

